My information added.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <header>
 <h1>Welcome to [KASONKOMONA MULENGA 2021519929] Website</h1>
+<h2>Group Partner Charity Siambuli 2021515486</h2>
 <nav>
 <a href="#">Home</a> |
 <a href="#">About</a> |
